deployment/template_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: template
  labels:
    app: template
spec:
  replicas: 2
  selector:
    matchLabels:
      app: template
  template:
    metadata:
      labels:
        app: template
    spec:
      containers:
        - name: template
          imagePullPolicy: Always
          image: docker.io/baolam0307/go-template:latest
          ports:
            - containerPort: 9000
---
