deployment/template_services.yaml
kind: Service
apiVersion: v1
metadata:
  name: template
spec:
  selector:
    app: template
  type: NodePort
  ports:
    - port: 9000
      targetPort: 9000
      protocol: TCP
      name: template
